[gd_scene load_steps=9 format=3 uid="uid://c5feefk8qarl6"]

[ext_resource type="Script" uid="uid://bvm5njnkdmtqk" path="res://src/skills/fauna/tree_of_life.gd" id="1_bs1ja"]
[ext_resource type="Texture2D" uid="uid://clyrer0y7im1r" path="res://assets/effects/nature's-blessings.png" id="1_ceiy3"]
[ext_resource type="Texture2D" uid="uid://da30ytgops8bb" path="res://assets/temporary/big-ass-tree.png" id="2_bs1ja"]

[sub_resource type="Animation" id="Animation_h8pq4"]
resource_name = "blessing"
length = 8.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(4, 1), Vector2(80, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = false
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.329877, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cwcdu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 0.25)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l6qsy"]
_data = {
&"RESET": SubResource("Animation_cwcdu"),
&"blessing": SubResource("Animation_h8pq4")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_ceiy3"]
radius = 512.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bs1ja"]
size = Vector2(164, 20)

[node name="Tree Of Life" type="Area2D"]
y_sort_enabled = true
texture_filter = 1
script = ExtResource("1_bs1ja")

[node name="Aura" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(1, 0.25)
texture = ExtResource("1_ceiy3")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Aura"]
libraries = {
&"": SubResource("AnimationLibrary_l6qsy")
}
autoplay = "blessing"

[node name="Tree" type="Sprite2D" parent="."]
position = Vector2(5, -155)
texture = ExtResource("2_bs1ja")

[node name="Range" type="CollisionShape2D" parent="."]
scale = Vector2(1, 0.25)
shape = SubResource("CircleShape2D_ceiy3")

[node name="Lifespan" type="Timer" parent="."]
wait_time = 30.0

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="SolidBox" type="CollisionShape2D" parent="StaticBody2D"]
scale = Vector2(0.955475, 3.1802)
shape = SubResource("RectangleShape2D_bs1ja")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Lifespan" to="." method="_on_timer_timeout"]
